[CSS] fix: change value z-index for preview photo

--- a/css/digiriskdolibarr.css
+++ b/css/digiriskdolibarr.css
@@ -3998,7 +3998,7 @@ td > .risk-evaluation-container {
   }
 }
 .preview-photo {
-  z-index: 1003 !important;
+  z-index: 2100 !important;
 }
 
 .imgTabTitle {
